<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="10dp"
    android:background="@color/ALICE_BLUE"
    android:id="@+id/connect_layout"

    tools:context=".connectActivity$PlaceholderFragment">

    <TextView android:id="@+id/section_label" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:paddingTop="@dimen/abc_action_bar_default_height_material"
        android:textSize="30sp"
        android:textColor="@color/ROYAL_BLUE"/>

    <EditText
        android:id="@+id/connect_login_field"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:padding="5dp"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/connect_login"
        android:textColorHint="@color/EDWARD"
        android:background="@color/GALLERY"
        />

    <EditText
        android:id="@+id/connect_password_field"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_width="200dp"
        android:layout_height="30dp"

        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/connect_login_field"
        android:hint="@string/connect_password"
        android:textColorHint="@color/EDWARD"
        android:background="@color/GALLERY"
        />

    <Button
        android:id="@+id/connect_ok_button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/connect_password_field"
        android:background="@color/ROYAL_BLUE"
        android:stateListAnimator="@null"
        android:textColor="@color/GALLERY"
        android:text="@string/connect_button"
        />

    <CheckBox
        android:id="@+id/connect_remember_me_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/connect_ok_button"
        android:text="@string/connect_rembember_me_checkbox"
        android:textColor="@color/EDWARD"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:text="@string/connect_signature"
        android:layout_centerHorizontal="true"
        android:textColor="@color/EDWARD"/>

</RelativeLayout>
